--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.3.0",
   "description": "webpack-template",
   "main": "index.js",
+  "homepage": "https://warbonnet333.github.io/CouncilFreedom/",
   "scripts": {
     "dev": "webpack-dev-server --open --config ./config/webpack.dev.conf.js",
     "prod": "npm run clean -s && set NODE_ENV=production && webpack --config ./config/webpack.build.conf.js",
+    "deploy": "gh-pages -d dist",
     "clean": "shx rm -rf dist",
     "lint": "eslint --debug src/",
     "smart-grid": "node smart-grid.js",
@@ -77,5 +79,8 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
