--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-plugin-remove": "^0.1.0",
     "jest": "^26.1.0",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
