--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^5.0.2",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-plugin-remove": "^0.1.0",
     "jest": "^26.1.0",
