--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "slick-slider": "^1.8.2"
   }
 }
